fix(css): link icon vertical-align; center foundation-day hero title on mobile

--- a/_sass/components/_link.scss
+++ b/_sass/components/_link.scss
@@ -68,7 +68,7 @@
         width: 1em;
         height: 1em;
         background: currentColor;
-        vertical-align: text-bottom;
+        vertical-align: sub;
         margin-inline-start: var(--spacing-xs);
         mask: var(--_link-icon) center / contain no-repeat;
         opacity: var(--nds-icons-opacity, 1);
