--- a/_sass/themes/_foundation-day.scss
+++ b/_sass/themes/_foundation-day.scss
@@ -50,6 +50,13 @@
 
 .nds-hero-section {
   background-color: #493530;
+
+  @include tablet(max) {
+    .nds-section-title {
+      width: fit-content;
+      margin-inline: auto;
+    }
+  }
 }
 
 .nds-swiper:not([data-nds-swiper-initialized]) .nds-swiper-slide.nds-foundingDay .nds-block {
